--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <div class="title">
-        <h1>Fanpage : Pentatonix</h1>
+        <h1>Fanpage : Austin Patten</h1>
     </div>
     <div class="intro">
         <p>Welcome to my fanpage. </p>
-        <p>Here you can find some information about my favorite artist : Pentatonix</p>
+        <p>Here you can find some information about my favorite artist : Austin Patten</p>
 
-        <p>I really like this band, because all their songs are sung acapella.</p>
-        <p>That means, they don't use any instruments!</p>
-        <p>They do everything with their voices!</p>
+        <p>I really like his songs, as they have a smooth rythm on them and can uplift a mood!</p>
+        <p>I have known this artist since they were at 300 subscribers, its been good to see them grow from Beat-production to rap.</p>
+
     </div>
     <div class="youtube">
         <iframe width="560" 
                 height="315" 
-                src="https://www.youtube.com/embed/3MteSlpxCpo" 
+                src="https://www.youtube.com/embed/EM5D9qhzujY" 
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
