--- a/statistics.html
+++ b/statistics.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <div class="title">
-        <h1>Fanpage : Pentatonix</h1>
+        <h1>Fanpage : Austin Patten</h1>
     </div>
     <div class="subtitle">
         <h2>Statistics</h2>
     </div>
     <div class="statistics">
-        Some statistics will be added later Here.
+        <h4>Subscribers: 6.05k</h4>
+        <h4>View Count: 549,720 views</h4>
+        <h4>Videos Uploaded: 36 videos</h4> 
     </div>
     <a href="index.html"><input type="button" value="back"></a>
 </body>
